unpackaged/main/default/objects/Account/fields/Additional_Pipelines_Test__c.field-meta.xml
<CustomField>
    <fullName>Additional_Pipelines_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Pipelines - Test</label>
    <type>Checkbox</type>
</CustomField>