unpackaged/main/default/objects/Account/fields/Alexiscoooool__c.field-meta.xml
<CustomField>
    <fullName>Alexiscoooool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lool</description>
    <label>Alexiscoooool</label>
    <type>Checkbox</type>
</CustomField>