unpackaged/main/default/objects/Account/fields/Back_Prop_2__c.field-meta.xml
<CustomField>
    <fullName>Back_Prop_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Prop 2</label>
    <type>Checkbox</type>
</CustomField>