unpackaged/main/default/objects/Account/fields/Back_Prop_Test__c.field-meta.xml
<CustomField>
    <fullName>Back_Prop_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>retesting the back prop</description>
    <label>Back Prop - Test</label>
    <type>Checkbox</type>
</CustomField>