unpackaged/main/default/objects/Account/fields/Back_Sync_Test__c.field-meta.xml
<CustomField>
    <fullName>Back_Sync_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Sync Test</label>
    <type>Checkbox</type>
</CustomField>