unpackaged/main/default/objects/Account/fields/Barlow_Loves_Pipelines__c.field-meta.xml
<CustomField>
    <fullName>Barlow_Loves_Pipelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Barlow Loves Pipelines</label>
    <type>Checkbox</type>
</CustomField>