unpackaged/main/default/objects/Account/fields/BG_Demo_Field_1_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>BG_Demo_Field_1_Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BG Demo Field 1 Monitoring</label>
    <type>Checkbox</type>
</CustomField>