unpackaged/main/default/objects/Account/fields/Demo_Monitoring_Change2__c.field-meta.xml
<CustomField>
    <fullName>Demo_Monitoring_Change2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo-Monitoring-Change2</label>
    <type>Checkbox</type>
</CustomField>