unpackaged/main/default/objects/Account/fields/Demo_Monitoring_new__c.field-meta.xml
<CustomField>
    <fullName>Demo_Monitoring_new__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo-Monitoring-new</label>
    <type>Checkbox</type>
</CustomField>