unpackaged/main/default/objects/Account/fields/Demo_Pipelines_Refresher__c.field-meta.xml
<CustomField>
    <fullName>Demo_Pipelines_Refresher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo-Pipelines-Refresher</label>
    <type>Checkbox</type>
</CustomField>