unpackaged/main/default/objects/Account/fields/Does_Alex_Like_Pipelines__c.field-meta.xml
<CustomField>
    <fullName>Does_Alex_Like_Pipelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Alex Like Pipelines</label>
    <type>Checkbox</type>
</CustomField>