unpackaged/main/default/objects/Account/fields/Engaged__c.field-meta.xml
<CustomField>
    <fullName>Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the customer engaged</description>
    <label>Engaged</label>
    <type>Checkbox</type>
</CustomField>