unpackaged/main/default/objects/Account/fields/Happy_Customer__c.field-meta.xml
<CustomField>
    <fullName>Happy_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Happy Customer</label>
    <type>Checkbox</type>
</CustomField>