unpackaged/main/default/objects/Account/fields/Hotfix1_0__c.field-meta.xml
<CustomField>
    <fullName>Hotfix1_0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hotfix1.0</label>
    <type>Checkbox</type>
</CustomField>