unpackaged/main/default/objects/Account/fields/I_hate_pipelines__c.field-meta.xml
<CustomField>
    <fullName>I_hate_pipelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I hate pipelines</label>
    <type>Checkbox</type>
</CustomField>