unpackaged/main/default/objects/Account/fields/James_Demo__c.field-meta.xml
<CustomField>
    <fullName>James_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Demo field</description>
    <label>James-Demo</label>
    <type>Checkbox</type>
</CustomField>