unpackaged/main/default/objects/Account/fields/May_23_V2_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>May_23_V2_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>May-23-V2-Checkbox</label>
    <type>Checkbox</type>
</CustomField>