unpackaged/main/default/objects/Account/fields/New_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New account - tick 
Existing account - Unticked</description>
    <inlineHelpText>New account - tick 
Existing account - Unticked</inlineHelpText>
    <label>New Account</label>
    <type>Checkbox</type>
</CustomField>