unpackaged/main/default/objects/Account/fields/NI_Number__c.field-meta.xml
<CustomField>
    <fullName>NI_Number__c</fullName>
    <externalId>true</externalId>
    <label>NI Number</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>