unpackaged/main/default/objects/Account/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pipelines - Demo prep (Dev1 Onboarding checkbox)</description>
    <label>Onboarding</label>
    <type>Checkbox</type>
</CustomField>