unpackaged/main/default/objects/Account/fields/onboarding_manager_2__c.field-meta.xml
<CustomField>
    <fullName>onboarding_manager_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testfordemo2</description>
    <label>onboarding manager 2</label>
    <type>Checkbox</type>
</CustomField>