unpackaged/main/default/objects/Account/fields/Onboarding_Manager__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Onboarding Manager</description>
    <label>Onboarding Manager</label>
    <type>Checkbox</type>
</CustomField>