unpackaged/main/default/objects/Account/fields/Pipelines_Demo_V_1__c.field-meta.xml
<CustomField>
    <fullName>Pipelines_Demo_V_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pipelines - Demo V.1</label>
    <type>Checkbox</type>
</CustomField>