unpackaged/main/default/objects/Account/fields/Qualified_for_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Qualified_for_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Qualified for Onboarding - Dev 2 change -</description>
    <label>Qualified for Onboarding</label>
    <type>Checkbox</type>
</CustomField>