unpackaged/main/default/objects/Account/fields/SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SLASerialNumber__c</fullName>
    <description>‘Capture the 15 digit long serial number for the user&#39;s SLA.’</description>
    <label>SLA Serial Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>