unpackaged/main/default/objects/Account/fields/Whatsaappp__c.field-meta.xml
<CustomField>
    <fullName>Whatsaappp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whatsaappp</label>
    <type>Checkbox</type>
</CustomField>