unpackaged/main/default/objects/Account/fields/X19_Aug_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>X19_Aug_Pipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>19.Aug.Pipeline</description>
    <label>19.Aug.Pipeline</label>
    <type>Checkbox</type>
</CustomField>