unpackaged/main/default/objects/Account/fields/X23_May_Demo_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>X23_May_Demo_Pipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>23-May-Demo-Pipeline-</label>
    <type>Checkbox</type>
</CustomField>